--- a/web_flask/templates/5-number.html
+++ b/web_flask/templates/5-number.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <HTML lang="en">
-	<head>
+	<HEAD>
 		<TITLE>HBNB</TITLE>
-	</head>
-	<body>
+	</HEAD>
+	<BODY>
 		<H1>Number: {{n}}</H1>
-	</body>
+	</BODY>
 </HTML>
